# telegram-weather-alerts

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.sh
weather_watcher/: main.py
weather_watcher/model/: stats.py
weather_watcher/parser/: parser.py
weather_watcher/plotting/: plots.py
weather_watcher/sinks/: sink.py
weather_watcher/test/: test_processing.py
weather_watcher/test/resources/: sample_ky.json
weather_watcher/utils/: __init__.py
