[tool.poetry]
name = "telegram-weather-watcher"
version = "0.1.0"
description = ""
authors = ["Christian Hollinger <christian@chollinger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = "^0.7.2"
ruff = "^0.1.3"
urllib3 = "^2.0.7"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
plotly = "^5.18.0"
python-telegram-bot = "^20.6"
pyarrow = "^14.0.0"
croniter = "^2.0.1"
pause = "^0.3"
nbformat = "^5.9.2"
kaleido = "0.2.1"
overrides = "^7.4.0"
pydantic = "^2.4.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
