[tool.poetry]
name = "telegram-weather-watcher"
version = "0.1.0"
description = "Very simple program/script that grabs weather data for a ZIP code, sums it ups, plots it, and sends it to Telegram"
authors = ["Christian Hollinger <christian@chollinger.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
loguru = "^0.7.2"
urllib3 = "^2.0.7"
pandas = "^2.1.2"
matplotlib = "^3.8.1"
plotly = "^5.18.0"
python-telegram-bot = "^20.6"
pyarrow = "^14.0.0"
croniter = "^2.0.1"
pause = "^0.3"
overrides = "^7.4.0"
kaleido = "0.2.1"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"
nbformat = "^5.9.2"
ruff = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
