[project]
name = "telegram-weather-watcher"
version = "0.1.0"
description = "Very simple program/script that grabs weather data for a ZIP code, sums it ups, plots it, and sends it to Telegram"
authors = [{ name = "Christian Hollinger", email = "christian@chollinger.com" }]
requires-python = ">=3.11,<3.14"
readme = "README.md"
dependencies = [
    "loguru>=0.7.2,<0.8",
    "urllib3>=2.0.7,<3",
    "pandas>=2.1.2,<3",
    "matplotlib>=3.8.1,<4",
    "plotly>=5.18.0,<6",
    "python-telegram-bot~=20.6",
    "pyarrow>=14.0.0,<15",
    "croniter>=2.0.1,<3",
    "pause>=0.3,<0.4",
    "overrides>=7.4.0,<8",
    "kaleido==0.2.1",
    "numpy>=1,<2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.26.0,<7",
    "nbformat>=5.9.2,<6",
    "ruff>=0.1.3,<0.2",
    "pytest>=8.3.4,<9",
    "pytest-asyncio>=0.25.3,<0.26",
    "freezegun>=1.5.1,<2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["weather_watcher"]
